syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mat.jamr.gameservice.api";
option java_outer_classname = "IslandGrpcService";

import 'asset.proto';

service IslandService {
  rpc Create (CreateIslandRequest) returns (CreateIslandResponse) {}
  rpc Read (ReadIslandRequest) returns (ReadIslandResponse) {}
}

message CreateIslandRequest {
  string userId = 1;
  string variantId = 2;
  string name = 3;
}

message CreateIslandResponse {
  string id = 1;
}

message ReadIslandRequest {
  string islandId = 1;
}

message ReadIslandResponse {
  Island island = 1;
}

service IslandVariantService {
  rpc Read (ReadIslandVariantRequest) returns (IslandVariant) {}
}

enum IslandVariantType {
  DEFAULT = 0;
  CLASSIC = 1;
  FOREST = 2;
}

message ReadIslandVariantRequest {
  string id = 1;
}

message Island {
  string id = 1;
  string name = 2;
  string ownerId = 3;
  string namedVariant = 4;
  repeated string allowedPlayers = 5;
  string createdAt = 6;
  string updatedAt = 7;
  repeated Terrain terrains = 8;
}

message IslandVariant {
  string id = 1;
  IslandVariantType type = 2;
  string name = 3;
  string description = 4;
  repeated Terrain startingTerrains = 5;
}

message Terrain {
  string id = 1;
  string name = 2;
  repeated TerrainTile tiles = 3;
  int32 blockSize = 4;
  int32 sizeX = 5;
  int32 sizeY = 6;
}

message TerrainTile {
  int32 x = 1;
  int32 y = 2;
  int32 sizeX = 3;
  int32 sizeY = 4;
  Asset asset = 5;
}

//message Building {
//  string id = 1;
//  string name = 2;
//  string type = 3;
//  int32 x = 4;
//  int32 y = 5;
//  int32 level = 6;
//  string ownerId = 7;
//}

//message IslandBag {
//  string id = 1;
//  string islandId = 2;
//  repeated Item items = 3;
//  int32 capacity = 4;
//}
//
//message Item {
//  string id = 1;
//  string name = 2;
//  string type = 3;
//  int32 quantity = 4;
//}
